# Backend1

./: .env  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  pyproject_old.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: crud.py  main.py  models.py  utils.py
app/routers/: auth.py  tasks.py  users.py
app/schemas/: auth.py  tasks.py  users.py
click_commands/: cli.py  create_task.py  delete_task.py  update_task.py
config/: settings.py  urls.py  wsgi.py
